# TicTacToe

./: AI.cpp  AI.h  Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Logic.h  New.txt  Player.cpp  Player.h  Scores.cpp  Scores.h  Window.h  main.cpp
